--- a/ch5_0.qmd
+++ b/ch5_0.qmd
@@ -77,4 +77,6 @@ $$R^2 = \frac{\sum_{i=1}^n |\hat{y}_i - \bar{y}|^2}{\sum_{i=1}^n |y_i - \bar{y}|
 C'est un nombre entre 0 et 1. 
 :::
 
+Le numérateur est la variance empirique des prédictions $\hat{y}_i$. Le dénominateur est la variance empirique des observations. Dans les des cas, il s'agit de la norme carrée d'un vecteur ($\hat{Y}$ et $Y$) projeté sur l'espace des vecteurs de moyenne nulle. Comme $\hat{Y}$ est déjà une projection de $Y$ sur un certain sous-espace, on a forcément $|\hat{Y} - \bar{y}| \leqslant |Y - \bar{y}|$, donc le coefficient $R^2$ est toujours entre 0 et 1. 
+
 Plus le coefficient de détermination est proche de 1, meilleure est la régression -- attention, cet indicateur possède de nombreuses limites. 
