--- a/macros.tex
+++ b/macros.tex
@@ -2,3 +2,4 @@
 \newcommand{\bt}{\boldsymbol{\theta}}
 \newcommand{\dkl}{\mathrm{d}_{\mathrm{KL}}}
 \newcommand{\dtv}{\mathrm{d}_{\mathrm{TV}}}
+\newcommand{\emv}{\hat{\theta}_{\mathrm{emv}}}
