--- a/macros.tex
+++ b/macros.tex
@@ -1,4 +1,4 @@
-\newcommand{\bx}{\boldsymbol{x}}
+\newcommand{\bx}{\mathbf{x}}
 \newcommand{\bt}{\boldsymbol{\theta}}
 \newcommand{\dkl}{\mathrm{d}_{\mathrm{KL}}}
 \newcommand{\dtv}{\mathrm{d}_{\mathrm{TV}}}
